Early June Updates

--- a/projects.html
+++ b/projects.html
@@ -63,9 +63,6 @@
 
         </div>
 
-
-        <div class="row nav-spacer">
-        </div>
       
 
         <!-- miniboxes -->
@@ -76,14 +73,14 @@
               <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
                 <div class="col-xs-12 text-center project-title project-title-small">BERTRAM CREEKSIDE</div>
                 <div class="col-xs-12 project-thumb"> 
-                  <img class="center-block project-minibox-img img-responsive" src="./img/farmview/1small.jpg"/> 
+                  <img class="center-block project-minibox-img img-responsive" src="./img/bertramcreekside/1small.jpg"/> 
                 </div>
               </div>
 
               <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
                 <div class="col-xs-12 text-center project-title project-title-small">ROLLING MEADOWS</div>
                 <div class="col-xs-12 project-thumb"> 
-                  <img class="center-block project-minibox-img img-responsive" src="./img/farmview/1small.jpg"/> 
+                  <img class="center-block project-minibox-img img-responsive" src="./img/rollingmeadows/1small.jpg"/> 
                 </div>
               </div>
             </div>
@@ -93,7 +90,7 @@
               <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
                 <div class="col-xs-12 text-center project-title">SUN VIEW</div>
                 <div class="col-xs-12 project-thumb"> 
-                  <img class="center-block project-minibox-img img-responsive" src="./img/farmview/1small.jpg"/> 
+                  <img class="center-block project-minibox-img img-responsive" src="./img/sunview/1small.jpg"/> 
                 </div>
               </div>
 
@@ -158,6 +155,116 @@
 
           <!-- hidden full main content boxes shown by JS on a selective basis -->
           <div class="projects">
+
+
+
+
+            <div class="project-box col-xs-12 BERTRAM-CREEKSIDE">
+              <div class='row'>
+                <div class="col-xs-2 col-sm-1"><img class="back-arrow" src="img/misc/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+                <div class="col-xs-9 col-sm-10 text-center project-title noline">BERTRAM CREEKSIDE</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/bertramcreekside/2.jpg"/> </div>
+                <div class="col-xs-12 col-sm-8">
+                  <p class="project-description">
+                    <b>
+                      <br/><br/>
+                      Bertram Creekside Ranches<br/>
+                      Bertram, Texas<br/>
+                      2017<br/>
+                    </b>
+                    <br/><br/>
+                    Come build your dream home in the Texas hill country.  Fabulous 3 - 16 acre home sites with expansive views of the gently rolling terrain in all directions. Features include live and wet weather creeks, stock tanks, hilltop vistas and lovely trees.  Horses and livestock are welcome.  
+                    <br/><br/>
+                    Complimentary consultations with Agri-experts* are included with the purchase of each lot as well as shared gravel driveways. 
+                    <br/><br/>
+                    Just 3.8 miles north of downtown Bertram this is an ideal setting to escape from the city hustle and bustle. Close enough to Austin (45 minutes) yet far enough to have privacy, peace and tranquility.  
+                    <br/><br/>
+                    Nearby local entertainment includes the Highland Lakes, Canyon of the Eagles, Lake Travis and Longhorn Caverns all within 30 to 45 minutes.  Not to mention Pilot Knob Vineyards, Thirsty Mule Winery and the famous Flanigan’s Distillery all less than 15 minutes away. 
+                    <br/><br/>
+                    Bertram Schools, PEC Electric, Well & Septic are needed. No Flood Zone!
+                     <br/><br/>
+                    Prices start at $45,000 so these won’t last long!  
+                    <br/><br/>
+                    Call today for more information or to schedule an appointment to tour the property.
+                  </p>
+                </div>
+              </div>
+            </div> <!-- project-box -->
+
+            <div class="project-box col-xs-12 ROLLING-MEADOWS">
+              <div class='row'>
+                <div class="col-xs-2 col-sm-1"><img class="back-arrow" src="img/misc/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+                <div class="col-xs-9 col-sm-10 text-center project-title noline">ROLLING MEADOWS</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/rollingmeadows/2.jpg"/> </div>
+                <div class="col-xs-12 col-sm-8">
+                  <p class="project-description">
+                    <b>
+                      <br/><br/>
+                      Rolling Meadows<br/>
+                      Elgin, Texas<br/>
+                      2017<br/>
+                    </b>
+                    <br/><br/>
+                    If you are looking for an idyllic country setting to build your dream home this is the place for you.  Picture yourself drinking a cold glass of iced tea on your porch while the breeze blows across the lush green landscape, the gently rolling countryside stretching as far as your eye can see. The wide open and tranquil surroundings bring to mind days of old. 
+                    <br/><br/>
+                    These 5 acre homesites are situated on gently rolling terrain with great views in all directions. The fertile black soil is perfect for a family garden and the native grasses are great for grazing!  Two lots share ownership of a stock tank surrounded by lush trees and vegetation – your own private oasis!
+                    <br/><br/>
+                    Just 2 miles north of Highway 290 makes it the ideal location for your own personal country retreat only a short 25 minutes from Austin and even closer to local shopping and entertainment.  Come home to your “close in” country escape. 
+                    <br/><br/>
+                    *Electric lines are at the property line<br/>
+                    *Aqua water<br/>
+                    *Septic is needed<br/>
+                    *Elgin schools<br/>
+                    **No Flood Zone<br/><br/>
+                    <br/><br/>
+                    Call today for more information and to schedule an appointment to see the property.
+                  </p>
+                </div>
+              </div>
+            </div> <!-- project-box -->
+
+            <div class="project-box col-xs-12 SUN-VIEW">
+              <div class='row'>
+                <div class="col-xs-2 col-sm-1"><img class="back-arrow" src="img/misc/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+                <div class="col-xs-9 col-sm-10 text-center project-title noline">SUN VIEW</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/sunview/2.jpg"/> </div>
+                <div class="col-xs-12 col-sm-8">
+                  <p class="project-description">
+                    <b>
+                      <br/><br/>
+                      Sun View Ranchettes<br/>
+                      <!-- Elgin, Texas<br/> -->
+                      2017<br/>
+                    </b>
+                    <br/><br/>
+                    Your fabulous hill country homesite awaits you at Sun View Ranchettes.  Choose your lot from a variety of the 2 and 5 acre sites with various features including a private stock tank, lovely hardwoods and rolling terrain.  The majority of the lots have a gorgeous view of the hill country stretching as far as the eye can see.  Imagine coming home to your own country retreat.
+                    <br/><br/>
+                    Relaxed restrictions will allow you to have home of your dreams while still protecting your investment.  All lots front a private paved road which further protects your investment.
+                    <br/><br/>
+                    Located midway between SH 29 and Highway183 make it a close enough for commuters who work in Austin, Georgetown and surrounding areas yet far enough to have privacy and enjoy the expansive Texas countryside.  
+                    <br/><br/>
+                    Surrounded by local entertainment including several local wineries and distilleries, all within a 10 minute drive of the property. Not forgetting to mention the Highland Lakes, Canyon of the Eagles and Longhorn Caverns all within 30 to 40 minutes.   
+                    <br/><br/>
+                    Bertram Schools<br/>
+                    PEC Electric<br/>
+                    Well & Septic are needed.<br/>
+                    No Flood Zone!<br/>
+
+                  </p>
+                </div>
+              </div>
+            </div> <!-- project-box -->
+
+
+
+
+
 
             <div class="project-box col-xs-12 FARMVIEW">
               <div class='row'>
@@ -242,6 +349,7 @@
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
+                      SOLD OUT
                       <br/><br/>
                       Florence, Texas<br/>
                       2016<br/>
@@ -269,10 +377,10 @@
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description"> 
                     <b>
-                      SOLD
+                      SOLD OUT
                       <br/><br/>
                       Coupland, Texas<br/>
-                      2015-2016
+                      2016-2017
                     </b>
                     <br/><br/>
                     ARC identified an 82 acre tract of land in an ideal location within easy commuting 
@@ -301,8 +409,9 @@
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
+                      SOLD OUT
                       Hutto, Texas<br/>
-                      2016
+                      2015-2016
                     </b>
                     <br/><br/>
                     The Heights at Brushy Creek offers our choice of 8 beautiful lots each with unique features that make them the perfect spot to build your dream home. The beautiful and tranquil surroundings make this the ideal setting whatever your preference is.
@@ -337,7 +446,7 @@
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
-                      SOLD
+                      SOLD OUT
                       <br/><br/>
                       Manor, Texas<br/>
                       2015<br/>
@@ -369,7 +478,7 @@
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
-                      SOLD 
+                      SOLD OUT
                       <br/><br/>
                       Manor, Texas <br/>
                       2015-2016 <br/>
@@ -414,7 +523,7 @@
     <!-- <script src="js/ie10-viewport-bug-workaround.js"></script> -->
     <script>
       $(document).ready(function(){
-        $('.enter').velocity('transition.slideLeftIn', {stagger: 100, delay: 500});
+        $('.enter').velocity('transition.slideLeftIn', {stagger: 100, delay: 200});
 
         var assignLeave = function assignLeave() {
           $('.leave').unbind();
@@ -425,7 +534,7 @@
             //                  // line to be removed
             var enter = document.querySelectorAll('.enter');
 
-            $.Velocity(enter, 'transition.slideRightOut', {stagger: 250})
+            $.Velocity(enter, 'transition.slideRightOut', {stagger: 150})
             .then(function(elem){
               $(window).unload(function(){}); //fixes firefox's back button behavior
               window.location.href = path;
