meta color correction

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
     <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
-    <meta name="theme-color" content="##FFD700" />
+    <meta name="theme-color" content="#FFD700" />
     
     <title>ARC | Contact</title>
     <!-- Bootstrap core CSS -->
@@ -20,7 +20,7 @@
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Custom styles for this template -->
     <link href="css/all.css" rel="stylesheet">    
-    <link href="css/projects.css" rel="stylesheet">    
+    <link href="css/projects.css" rel="stylesheet">
   </head>
   <body>
      <div class="site-wrapper">
