--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
     <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
-    <meta name="theme-color" content="##FFD700" />
+    <meta name="theme-color" content="#FFD700" />
 
     <title>ARC | About</title>
     <!-- Bootstrap core CSS -->
