--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 
     <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
     <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
-    <meta name="theme-color" content="#FFD700" />
+    <meta name="theme-color" content="#9ec1b9" />
     
     <title>ARC | Projects</title>
     <!-- Bootstrap core CSS -->
@@ -34,7 +34,7 @@
             <p class="enter mini-display">A<span class="the-r">R</span>C</p>
           </div>
         
-          <div class="col-xs-12 col-sm-8 col-sm-offset-0 col-md-8 col-md-offset-0 col-lg-4 col-lg-offset-1 ">
+          <div class="col-xs-12 col-sm-8 col-sm-offset-0 col-md-8 col-md-offset-0 col-lg-4 col-lg-offset-1" style="height:40px;">
             <ul class="navbar enter nav nav-pills">
               <div class="row">
                 <div class="col-xs-3">
@@ -94,7 +94,7 @@
                 </div>
               </div>
 
-              <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
+              <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8 sold">
                 <div class="col-xs-12 text-center project-title project-title-small">FLORENCE RANCHETTES</div>
                 <div class="col-xs-12 project-thumb"> 
                   <img class="center-block project-minibox-img img-responsive" src="./img/florence/cover.jpg"/> 
@@ -103,7 +103,7 @@
             </div>
 
             <div class="row">
-              <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
+              <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8 sold">
                 <div class="col-xs-12 text-center project-title">BRUSHY CREEK</div>
                 <div class="col-xs-12 project-thumb"> 
                   <img class="center-block project-minibox-img img-responsive" src="./img/brushycreek/1small.jpg"/> 
@@ -135,7 +135,7 @@
             </div>
 
             <div class="row">
-              <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
+              <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8 sold">
                 <div class="col-xs-12 text-center project-title">SVENSKA ESTATES</div>
                 <div class="col-xs-12 project-thumb"> 
                   <img class="center-block project-minibox-img img-responsive" src="./img/svenska/svenska7.jpg"/> 
