some color scheme experimentation

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 
     <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
     <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
-    <meta name="theme-color" content="#9ec1b9" />
+    <meta name="theme-color" content="3da5d9" old="#9ec1b9" consider="86BBD8"/>
     
     <title>ARC | Projects</title>
     <!-- Bootstrap core CSS -->
