meta color mobile browser now decided as gray, background now decided as a nice dark blue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
     <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
-    <meta name="theme-color" content="#9ec1b9" />
+    <meta name="theme-color" content="#B2B0B2" />
 
     <title>ARC</title>
     <!-- Bootstrap core CSS -->
