--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
     <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
-    <meta name="theme-color" content="#86BBD8" />
+    <meta name="theme-color" content="#B2B0B2" />
     
     <title>ARC | Contact</title>
     <!-- Bootstrap core CSS -->
